--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Index.html</title>
 </head>
 <body>
-    <p>This ia my first page.</p>
+    <p>This is My First Page.</p>
     <this V2 is the second change>
     <i am adding v3 here>
 </body>
